Add Symfony application with MicroPost feature

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
         {% endblock %}
     </head>
     <body>
+        <h1>My Symfony App</h1>
         {% block body %}{% endblock %}
     </body>
 </html>
