--- a/templates/micro_post/edit.html.twig
+++ b/templates/micro_post/edit.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Create New Post{% endblock %}
+{% block title %}Editing an Existing Post{% endblock %}
 
 {% block bread %}
-→ Add Post
+→ Edit Post
 {% endblock %}
 
 {% block body %}
