--- a/templates/micro_post/show.html.twig
+++ b/templates/micro_post/show.html.twig
@@ -2,14 +2,10 @@
 
 {% block title %}Post - {{post.title}}{% endblock %}
 
+{% block bread %}
+→ Post
+{% endblock %}
+
 {% block body %}
-  <h3>{{post.title}}</h3>
-  <div>{{post.text}}</div>
-  <div style="color: grey;">
-  {% if date(post.created) < date('-1year') %}
-    Older than 1 year
-  {% else %}
-    {{ post.created|date('d/m/Y') }}
-  {% endif %}
-  </div>
+  {{ include('micro_post/_post.html.twig', {post: post}) }}
 {% endblock %}
